force-app/main/default/objects/Customer_Order_Line_Item__c/Customer_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Customer Order Line Item</label>
    <nameField>
        <displayFormat>COLI-{00000}</displayFormat>
        <label>Customer Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>