force-app/main/default/objects/Customer_Order_Line_Item__c/fields/Customer_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order__c</fullName>
    <label>Customer Order</label>
    <referenceTo>CustomerOrders__c</referenceTo>
    <relationshipLabel>Customer Order Line Items</relationshipLabel>
    <relationshipName>Customer_Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>