force-app/main/default/objects/Customer_Order_Line_Item__c/fields/Distribution_Center__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Center__c</fullName>
    <label>Distribution Center</label>
    <type>Text</type>
    <length>255</length>
</CustomField>