force-app/main/default/objects/Customer_Order_Line_Item__c/fields/Fulfillment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Notes__c</fullName>
    <label>Fulfillment Notes</label>
    <type>TextArea</type>
</CustomField>