force-app/main/default/objects/Customer_Order_Line_Item__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>